--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <title>My Content</title>
     <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.css">
-    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="./src/styles/index.css">
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
     <script src="http://code.angularjs.org/1.0.3/angular-sanitize.js"></script>
 
@@ -12,7 +12,7 @@
     <!-- Angular Material Library -->
     <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
-    <script src="./scripts/index.js" type="text/javascript"></script>
+    <script src="./src/scripts/index.js" type="text/javascript"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
           rel="stylesheet">
 </head>
